--- a/style.css
+++ b/style.css
@@ -5,22 +5,27 @@
   font-family: 'Inter', sans-serif;
 }
 
-body {
-  padding: 24px;
-}
-
 header {
   display: flex;
   justify-content: space-between;
+  padding: 15px;
+  align-items: center;
+ 
 }
-
+.log{
+  color: #28352f;
+}
 .section-1 {
-  background-image: url(img/header-illsutration-mobile.svg);
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center;
-  width: 100%;
-  height: 100vh;
+  background-image: url('./img/header-illsutration-mobile.svg');
+    background-repeat: no-repeat;
+    background-position: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    height: 80vh;
+    width: 100%;
+    justify-content: center;
+    padding: 24px;
 }
 
 .heading-1 {
@@ -29,12 +34,13 @@ header {
   font-size: 30px;
   text-align: center;
   margin: 0 24px;
-  margin-top: 25px;
-  color: #172b4d;
+  margin-top: 30px;
+  color: #142c55;
+ 
 }
 
 .heading-2 {
-  color: #36b37e;
+  color: #2cbb7f;
   text-align: center;
   font-size: 30px;
 }
@@ -52,8 +58,25 @@ header {
   justify-content: space-around;
   margin: 0 50px;
   margin-top: 30px;
+  width: 100px;
 }
 
+.icons li {
+  margin-right: 20px;
+}
+
+.icons li i {
+  color:#505f79;
+  font-size: 20px;
+}
 .fa {
   color: #172b4d;
+}
+.Welcome{
+  text-decoration: none;
+  color: black;
+}
+.section-1{
+  display: flex ;
+  flex-direction: column;
 }
