--- a/style.css
+++ b/style.css
@@ -281,9 +281,177 @@ button:active {
   margin-top: 14px;
 }
 
+.green-btn:hover {
+  box-shadow: 0 8px 16px rgba(54, 179, 127, 0.24);
+  cursor: pointer;
+}
+
 .footer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  background-image: url(img/Frame.png);
+  background-repeat: no-repeat;
+  background-position: bottom right;
+}
+
+.form {
   display: flex;
   flex-direction: column;
   margin-top: 60px;
   align-items: center;
 }
+
+.contact-header {
+  width: 321px;
+}
+
+.form form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.input {
+  width: 327px;
+  height: 48px;
+  border: 1px solid #d0d9d4;
+  border-radius: 4px;
+  padding: 15px 16px;
+  margin-bottom: 24px;
+}
+
+.text-area {
+  height: 114px;
+  color: #091e42;
+}
+
+label {
+  display: none;
+}
+
+.footer-email {
+  margin-bottom: 17.04px;
+}
+
+.bg-popup {
+  position: fixed;
+  display: none;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(182, 177, 177, 0.801);
+  width: 100%;
+  overflow-y: scroll;
+}
+
+.btns {
+  display: flex;
+  list-style: none;
+  margin: 12px 0;
+  align-self: flex-start;
+}
+
+.popup-data {
+  width: 95%;
+  margin: 20px auto;
+  background-color: #fff;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  padding: 10px 15px 80px 15px;
+  border-radius: 16px;
+}
+
+.bottom-card-popup {
+  background-color: white;
+  border-radius: 8px;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  width: auto;
+}
+
+.popup-text {
+  font-weight: normal;
+  font-size: 16px;
+  color: #344563;
+  text-align: justify;
+  line-height: 24px;
+}
+
+.img-block {
+  border-radius: 8px;
+  margin-bottom: 12px;
+  width: 100%;
+  display: block;
+}
+
+.card-heading-popup {
+  height: 135px;
+  width: 259px;
+  color: #172b4d;
+  font-weight: 600;
+  font-size: 32px;
+  line-height: 44px;
+  margin-top: 15px;
+  align-self: flex-start;
+}
+
+.popup-btns {
+  display: flex;
+}
+
+.popup-btn-container {
+  margin-top: 24px;
+}
+
+.footer-icons a {
+  font-size: 23px;
+}
+.popup-btn {
+  width: 158px;
+  height: 48px;
+  background: #36b37f;
+  border-radius: 4px;
+  padding: 12px;
+  border: none;
+  font-weight: 500;
+  font-size: 17px;
+  line-height: 24px;
+  color: #ffff;
+}
+
+.popup-close-btn {
+  align-self: flex-end;
+  font-size: 32px;
+  align-items: center;
+  display: flex;
+  padding: 4px;
+  border-radius: 3px;
+  margin-bottom: 12px;
+  top: 20px;
+  background: rgba(235, 236, 240, 1);
+  color: rgba(103, 121, 142, 1);
+}
+
+.popup-modal {
+  list-style: none;
+}
+
+.error-message {
+  width: auto;
+  color: red;
+  height: auto;
+  background-color: #f1a0a9;
+  border-radius: 5px;
+  padding: 5px 15px;
+  display: none;
+}
+
+.social-icons li {
+  padding-top: 24px;
+  }
