--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: 'Inter', sans-serif;
+  font-family: "Inter", sans-serif;
   list-style: none;
 }
 
@@ -18,7 +18,7 @@ header {
 }
 
 .section-1 {
-  background-image: url('./img/header-illsutration-mobile.svg');
+  background-image: url("./img/header-illsutration-mobile.svg");
   background-repeat: no-repeat;
   background-position: center;
   display: flex;
@@ -50,6 +50,12 @@ header {
   text-align: center;
   color: #172b4d;
   margin-top: 35px;
+}
+.introduction-text {
+  color: #172b4d;
+  text-align: center;
+  margin-bottom: 50px;
+  font-size: 40px;
 }
 
 .icons {
@@ -185,7 +191,8 @@ header {
 /* ------- About Section ------- */
 
 .about {
-  background-image: url(./img/img/illustration2.svg), url(./img/img/illustration.svg);
+  background-image: url(./img/img/illustration2.svg),
+    url(./img/img/illustration.svg);
   background-position: top right, bottom left;
   background-repeat: no-repeat, no-repeat;
   position: relative;
@@ -279,6 +286,14 @@ button:active {
   line-height: 28px;
   color: #172b4d;
   margin-top: 14px;
+}
+
+.green-btn {
+  background-color: #36b37f;
+  padding: 12px;
+  border: none;
+  border-radius: 5px;
+  color: #fff;
 }
 
 .green-btn:hover {
@@ -452,6 +467,12 @@ label {
   display: none;
 }
 
-.social-icons li {
-  padding-top: 24px;
-  }
+.footer-line {
+  min-height: 50vh;
+}
+
+.my-email {
+  text-align: center;
+  margin-top: -15px;
+  color: #42526e;
+}
