--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+
 * {
   margin: 0;
   padding: 0;
@@ -36,7 +37,6 @@ header {
   font-size: 30px;
   text-align: center;
   margin: 0 24px;
-  margin-top: 30px;
   color: #142c55;
 }
 
@@ -50,7 +50,8 @@ header {
   font-size: 20px;
   text-align: center;
   color: #172b4d;
-  margin-top: 35px;
+  margin-top: 20px;
+  padding: 0 15%;
 }
 
 .introduction-text {
@@ -132,12 +133,12 @@ header {
   margin: 20px auto;
   border: 1px solid #ddd;
   border-radius: 10px;
-  height: 474px;
+  height: 390px;
 }
 
 .project-cards img {
   width: 100%;
-  height: 60%;
+  height: 50%;
 }
 
 .project-cards h4 {
@@ -183,7 +184,7 @@ header {
   border: none;
   color: #fff;
   border-radius: 5px;
-  padding: 5px 10px;
+  padding: 10px 15px;
 }
 
 /* ------- About Section ------- */
@@ -205,15 +206,16 @@ header {
 }
 
 .tech-btn {
-  height: 325px;
+  height: 340px;
   border-radius: 8px;
   border: 1px solid #c1c7d0;
   background-color: #ebf0ee;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
   margin-top: 46px;
+  padding: 10px;
+  padding-top: 25px;
 }
 
 .card-list {
@@ -224,6 +226,7 @@ header {
 
 .lang {
   margin-bottom: 24px;
+  margin-top: 45px;
 }
 
 .buttons {
@@ -274,7 +277,7 @@ button:active {
   line-height: 52px;
   text-align: center;
   font-size: 40px;
-  margin: 24px 0;
+  margin-top: 70px;
 }
 
 .about-text {
@@ -476,11 +479,16 @@ label {
   color: #42526e;
 }
 
+.navbar-links {
+  display: none;
+}
+
 @media screen and (min-width: 992px) {
   .section-1 {
     background-image: url(img/img/Header-llustration-desktop@2x.png);
     background-position: center;
     background-size: cover;
+    margin-top: -30px;
   }
 
   .about-text {
@@ -513,24 +521,23 @@ label {
 
   .introduction-text {
     color: #172b4d;
-    text-align: justify;
+    text-align: start;
     font-size: 30px;
+    margin-left: 70px;
   }
 
   .contact-header {
     width: 90%;
-    padding-left: 35px;
   }
 
   .form form {
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-left: -100px;
   }
 
   .input {
-    width: 480px;
+    width: 450px;
     height: 48px;
     border: 1px solid #d0d9d4;
     border-radius: 4px;
@@ -549,10 +556,42 @@ label {
   }
 
   .green-btn {
-    margin-left: -188%;
+    margin-left: -173%;
   }
 
   .green-line {
     display: none;
+  }
+
+  .navbar-humberger {
+    display: none;
+  }
+
+  .navbar-links {
+    display: flex;
+    margin: auto;
+    width: 50%;
+    padding-left: 12%;
+  }
+
+  .Welcome {
+    display: none;
+  }
+
+  .link {
+    list-style: none;
+    padding-right: 40px;
+  }
+
+  .link a:link {
+    text-decoration: none;
+    color: #344563;
+    font-size: 15px;
+    line-height: 20px;
+    font-weight: 500;
+  }
+
+  .buttons {
+    margin-bottom: 10px;
   }
 }
