--- a/style.css
+++ b/style.css
@@ -33,6 +33,7 @@ header {
   height: 90vh;
 }
 
+
 .heading-1 {
   font-style: normal;
   font-weight: bold;
@@ -199,6 +200,10 @@ header {
   border-radius: 5px;
   padding: 10px 15px;
 }
+
+/* nav {
+  display: none;
+} */
 
 /* ------- About Section ------- */
 
@@ -494,9 +499,42 @@ label {
   color: #42526e;
 }
 
+
 .navbar-links {
   display: none;
 }
+
+.navbar-links li {
+  text-align: left;
+  margin-left: 10%;
+  margin-top: 10%;
+  list-style: none;
+  font-weight: 600;
+  line-height: 44px;
+  font-style: normal;
+  font-size: 32px;
+  font-family: 'Inter', sans-serif;
+}
+
+.navbar-links a {
+  text-decoration: none;
+}
+
+.navbar-links.d-block{
+  display: block;
+  gap: 40px;
+  height: 100%;
+  width: 100%;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 100;
+  background-color: #fff;
+  color: #3a4a42;
+}
+
+
+
 
 @media screen and (min-width: 992px) {
   .section-1 {
