--- a/style.css
+++ b/style.css
@@ -549,6 +549,9 @@ label {
     padding: 0 12%;
   }
 
+  .closeIcon {
+    display: none;
+  }
   .work-section {
     margin: 10px 0;
     padding: 100px 30px 50px 30px;
